# StuffingService

./: .gitignore  Address.cpp  Address.h  Admin.cpp  Admin.h  CMakeLists.txt  LICENSE  Person.cpp  Person.h  README.md  Specialist.cpp  Specialist.h  User.cpp  User.h  interaction.cpp  interaction.h  main.cpp  sonar-project.properties
.github/workflows/: build.yml
headers/: Address.h  Admin.h  Database.h  MainWindow.h  MyContainer.h  Person.h  ReportGenerator.h  Specialist.h  User.h  exceptions.h
src/: Address.cpp  Admin.cpp  CMakeLists.txt  Database.cpp  MainWindow.cpp  MainWindow.h  MyContainer.cpp  MyContainer.tpp  Person.cpp  Person.h  README.md  ReportGenerator.cpp  Specialist.cpp  User.cpp  exceptions.cpp  main.cpp
src/headers/: Address.h  Admin.h  Database.h  Person.h  Specialist.h  User.h
